tests/fail/func_illegal_return.crema
def int foo( int x, int y, int z) {
    return x+y>z
}
int bar = foo(3,4,5)
